@@ -26,7 +26,7 @@
 #include <sys/types.h>
 #include <sys/stat.h>
 
-#ifndef _MSC_VER  
+#if !defined(_MSC_VER)
 #include <sys/time.h>
 #endif
 #include "ggnfs.h"
